style.css
body{
    background-color:#2B2B2B;
}

#main_title{
    color:#CC7832;
    
    font-family:"Lucida Console", Monaco, monospace;
    font-size:30px;
    letter-spacing: .2em;
    
    margin-left:auto;
    margin-right:auto;
    margin-top:20px;
    margin-bottom:0px;
    width:50%;

    padding:0px;
    
}

#title_info {
    
    color:#459d51;
    font-family:"Lucida Console", Monaco, monospace;
    
    margin-top:0px;
    margin:auto;
    width:50%;
}

hr {
    /* All those boxes n' stuff are a bit complicated for sperating*/
    border-color:#202020;
}
/* 
background = #2B2B2B
color palette: 
1. CC7832 (orangeish) # main color
2. 052B52 complementry -ish (dark blue)
3. 2B2B2B main color, background (drk grey)
4. A9B7C6 light color (ripping off pycharms text)

*/

